# resources/swagger.json
@@ -627,6 +627,14 @@
         },
         "password": {
           "type": "string"
+        },
+        "accessLevel": {
+          "type": "string",
+          "enum": [
+            "Basic",
+            "Admin",
+            "Management"
+          ]
         }
       }
     },
